[metadata]
name = myotp
version = attr: myotp.VERSION
description = Tool to generate One-Time Passwords
long_description = file: README.rst
license = GPLv3
author = Peter Pakos
author-email = peter.pakos@wandisco.com
url = https://github.com/peterpakos/otp
keywords = otp one time password generator auth
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: System :: Systems Administration :: Authentication/Directory

[options]
include_package_data = True
packages = myotp
install_requires =
    pyotp>=2.2.6

[options.entry_points]
console_scripts =
  otp = myotp.main:main

[bdist_wheel]
universal = 1

[aliases]
package = clean --all egg_info bdist_wheel sdist
release = package upload
testrelease = package upload -r testpypi